# PathTracer

./: CMakeLists.txt  README.md  boundingbox.cpp  boundingbox.h  cobject.cpp  cobject.h  cray.cpp  cray.h  csphere.cpp  csphere.h  ctriangle.cpp  ctriangle.h  display.h  global.h  gvector3.cpp  gvector3.h  lights.cpp  lights.h  material.cpp  material.h  myScene.cpp  myScene.h  perspectiveCamera.cpp  perspectiveCamera.h  raytracer.cpp  render.cpp  render.h  scene_io.cpp  scene_io.h
